dataset1235/2025-2/1955397009/users/3091828991/executions/1107611404_2667036473.log
== RUN (2025-08-19 13:18:20)
-- CODE: 
tempC = float(input("Temperatura em Celsius: "))
tempK = tempC + 273.15

print(round(tempk,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(tempk,2))
                ^^^^^
NameError: name 'tempk' is not defined. Did you mean: 'tempK'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(tempk,2))
                ^^^^^
NameError: name 'tempk' is not defined. Did you mean: 'tempK'?
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(tempk,2))
                ^^^^^
NameError: name 'tempk' is not defined. Did you mean: 'tempK'?
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(tempk,2))
                ^^^^^
NameError: name 'tempk' is not defined. Did you mean: 'tempK'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(tempk,2))
                ^^^^^
NameError: name 'tempk' is not defined. Did you mean: 'tempK'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(tempk,2))
                ^^^^^
NameError: name 'tempk' is not defined. Did you mean: 'tempK'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 13:19:12)
-- CODE: 
tempC = float(input("Temperatura em Celsius: "))
tempK = tempC + 273.15
print(round(tempK,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Temperatura em Celsius: 293.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Temperatura em Celsius: 263.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Temperatura em Celsius: 233.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Temperatura em Celsius: 373.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Temperatura em Celsius: 273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Temperatura em Celsius: 303.65
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 13:10:34)
-- CODE: 
tempC = float(input("Temperatura em Celsius: "))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Temperatura em Celsius:
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Temperatura em Celsius:
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Temperatura em Celsius:
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Temperatura em Celsius:
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Temperatura em Celsius:
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Temperatura em Celsius:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 13:09:40)
-- CODE: 
tempC = float(input("Temperatura em Celsius: "))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Temperatura em Celsius:
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Temperatura em Celsius:
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Temperatura em Celsius:
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Temperatura em Celsius:
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Temperatura em Celsius:
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Temperatura em Celsius:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 13:18:06)
-- CODE: 
tempC = float(input("Temperatura em Celsius: "))
tempK = tempC + 273.15

print(round(tempk,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(tempk,2))
                ^^^^^
NameError: name 'tempk' is not defined. Did you mean: 'tempK'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(tempk,2))
                ^^^^^
NameError: name 'tempk' is not defined. Did you mean: 'tempK'?
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(tempk,2))
                ^^^^^
NameError: name 'tempk' is not defined. Did you mean: 'tempK'?
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(tempk,2))
                ^^^^^
NameError: name 'tempk' is not defined. Did you mean: 'tempK'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(tempk,2))
                ^^^^^
NameError: name 'tempk' is not defined. Did you mean: 'tempK'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(tempk,2))
                ^^^^^
NameError: name 'tempk' is not defined. Did you mean: 'tempK'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 13:52:08)
-- CODE: 
tempC = float(input("temperatura em Celsius: "))
tempK = tempC + 273.15
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
temperatura em Celsius:
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
temperatura em Celsius:
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
temperatura em Celsius:
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
temperatura em Celsius:
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
temperatura em Celsius:
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
temperatura em Celsius:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 13:19:25)
-- CODE: 
tempC = float(input("Temperatura em Celsius: "))
tempK = tempC + 273.15
print(round(tempK,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Temperatura em Celsius: 293.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Temperatura em Celsius: 263.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Temperatura em Celsius: 233.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Temperatura em Celsius: 373.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Temperatura em Celsius: 273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Temperatura em Celsius: 303.65
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 13:51:42)
-- CODE: 
tempC = float(input("temperatura em Celsius"))
tempK = tempC + 273.15
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
temperatura em Celsius
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
temperatura em Celsius
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
temperatura em Celsius
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
temperatura em Celsius
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
temperatura em Celsius
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
temperatura em Celsius
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 13:17:43)
-- CODE: 
tempC = float(input("Temperatura em Celsius: "))
tempK = tempC + 273.15

print(round(tempk,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(tempk,2))
                ^^^^^
NameError: name 'tempk' is not defined. Did you mean: 'tempK'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(tempk,2))
                ^^^^^
NameError: name 'tempk' is not defined. Did you mean: 'tempK'?
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(tempk,2))
                ^^^^^
NameError: name 'tempk' is not defined. Did you mean: 'tempK'?
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(tempk,2))
                ^^^^^
NameError: name 'tempk' is not defined. Did you mean: 'tempK'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(tempk,2))
                ^^^^^
NameError: name 'tempk' is not defined. Did you mean: 'tempK'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(tempk,2))
                ^^^^^
NameError: name 'tempk' is not defined. Did you mean: 'tempK'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 13:18:41)
-- CODE: 
tempC = float(input("Temperatura em Celsius: "))
tempK = tempC + 273.15
print(round(tempk,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(tempk,2))
                ^^^^^
NameError: name 'tempk' is not defined. Did you mean: 'tempK'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(tempk,2))
                ^^^^^
NameError: name 'tempk' is not defined. Did you mean: 'tempK'?
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(tempk,2))
                ^^^^^
NameError: name 'tempk' is not defined. Did you mean: 'tempK'?
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(tempk,2))
                ^^^^^
NameError: name 'tempk' is not defined. Did you mean: 'tempK'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(tempk,2))
                ^^^^^
NameError: name 'tempk' is not defined. Did you mean: 'tempK'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(tempk,2))
                ^^^^^
NameError: name 'tempk' is not defined. Did you mean: 'tempK'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
